--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -1,6 +1,11 @@
 $primary: #141c3a;
 $secondary: #0a0a0ae6;
 $background-blue: #6E07F3;
+$link-blue: #0068d1;
+$dark-blue: #141c3a;
+$lavender: rgba(255, 255, 255, 0.5);
+$green: #5BE9B9;
+
 
 $background-gradient: linear-gradient(90deg, #020a4e 0, #1badd9 100%);
 $background-gradient-reverse: linear-gradient(90deg, #1badd9 0, #020a4e 100%);
