--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,58 +1,79 @@
 @import "../../styles/base";
 
 .root {
-    margin-top: toRem(180);
+  margin-top: toRem(180);
 
-    &Top {
-        margin-top: toRem(-8);
-        background: $background-blue;
-        width: 100%;
-        height: toRem(612);
+  &Top {
+    margin-top: toRem(-8);
+    background: $background-blue;
+    width: 100%;
+    height: toRem(512);
 
-        &TexBox {
-            text-align: center;
-            padding-top: toEm(100);
-            color: $white-100;
+    &TexBox {
+      text-align: center;
+      padding-top: toEm(100);
+      color: $white-100;
 
-            h1 {
-                font-size: toRem(32);
-            }
+      h1 {
+        font-size: toRem(32);
+      }
 
-            p {
-                font-size: toRem(20);
-                max-width: toRem(796);
-                margin: toEm(24) auto;
-            }
-        }
-
+      p {
+        font-size: toRem(20);
+        max-width: toRem(796);
+        margin: toEm(24) auto;
+      }
     }
 
-    &Bottom {
-        @include container;
+  }
+
+  &Bottom {
+    @include container;
+    margin-top: toEm(-220);
+
+    &Projects {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      margin-top: toEm(24);
+      gap: toEm(18);
+
+      &Project {
+        border: 1px solid $border;
+        padding: toEm(60) toEm(35);
+        display: flex;
+        flex-direction: column;
+        gap: toEm(24);
+        text-align: center;
         background: $white-100;
         border-radius: toEm(12);
-        margin-top: toEm(-220);
-        padding: toEm(24);
         box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8;
 
-        h2 {
-            font-size: toRem(32);
+
+        &Logo {
+          height: toRem(36);
+          width: auto;
         }
 
-        &Projects {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            margin-top: toEm(24);
-            gap: toEm(18);
-
-            &Project {
-                border-right: 1px solid $border;
-                padding: toEm(12);
-
-                &:last-child {
-                    border: none;
-                }
-            }
+        &Desc {
+          font-size: toRem(18);
         }
+
+        &Link {
+          display: flex;
+          align-items: center;
+          gap: toEm(8);
+          justify-content: center;
+
+          img {
+            width: toRem(16);
+            height: toRem(16);
+          }
+
+          a {
+            color: $link-blue;
+          }
+        }
+      }
     }
+  }
 }
