--- a/src/layout/Baselayout.module.scss
+++ b/src/layout/Baselayout.module.scss
@@ -1,13 +1,36 @@
 @import "../styles/base";
 
 .header {
-    @include display-flex-space;
+
+  padding: toRem(18);
+  border-bottom: 1px solid $border;
+  position: sticky;
+  top: 0;
+  background-color: rgba($background-blue, 0.1);
+
+  &Container {
     @include container;
+    @include display-flex-space;
+  }
 
-    height: toRem(80);
-    border-bottom: 1px solid rgba(128, 128, 128, 0.65);
+  img {
+    width: toRem(48);
+    height: toRem(48);
+    border-radius: 100%;
+  }
 
-    a {
-        color: black;
+  a {
+    color: black;
+    font-weight: bold;
+  }
+
+  ul {
+    display: flex;
+    align-items: center;
+    gap: toRem(10);
+
+    button {
+      padding: toRem(10) toRem(20);
     }
+  }
 }
